REGRESSION(r126683): Table cell are getting borders when the style doesn't mention any https://bugs.webkit.org/show_bug.cgi?id=101677

Reviewed by Julien Chaffraix.

Source/WebCore:

The bordercolor attribute on a cell or row has no effect on FF and Opera, even when the parent
table has a border attribute. IE displays the bordercolor of the cell and row in all cases except when
the parent has no border attribute. WebKit's old behaviour (before r126683) was to display the
bordercolor of the row but not the cells (I don't think this behaviour was particularly deliberate). No
browser displays the bordercolor for a col or tbody element.

Bring WebKit into line with Opera and FF by ignoring the bordercolor attribute on cells, rows, cols, rowgroups, and
colgroups in all cases, regardless of whether the table has a border or not.

Test: fast/table/td-bordercolor-attribute.html

* html/HTMLTablePartElement.cpp:
(WebCore::HTMLTablePartElement::isPresentationAttribute):
(WebCore::HTMLTablePartElement::collectStyleForPresentationAttribute):

LayoutTests:

* fast/table/td-bordercolor-attribute-expected.txt: Added.
* fast/table/td-bordercolor-attribute.html: Added.


Canonical link: https://commits.webkit.org/122294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136712 268f45cc-cd09-0410-ab3c-d52691b4dbfc